Update example Makefile

--- a/tests/nolibc/Makefile
+++ b/tests/nolibc/Makefile
@@ -10,7 +10,7 @@ CFLAGS+=	${BUILDRUMP_TOOL_CFLAGS}
 LDFLAGS:= -L$(abspath ../../rumprun/lib)
 LDFLAGS+= -L$(abspath ../../lib/libbmk_core/hw/)
 LDFLAGS+= -L$(abspath ../../lib/libbmk_rumpuser/hw/)
-LDFLAGS+= -L$(abspath ../../lib/librumpkern_compiler_rt/)
+LDFLAGS+= -L$(abspath ../../lib/librumpkern_compiler_rt/hw)
 
 CPPFLAGS+= -I../../include -I../../rumprun/include -I../../platform/hw/include
 CPPFLAGS+= -nostdlib
@@ -25,7 +25,7 @@ ifeq (${MACHINE},i386)
 LDFLAGS+= -m elf_i386
 endif
 
-OBJS= main.o $(abspath ../../platform/hw/rumprun.o)
+OBJS= main.o $(abspath ../../platform/hw/rumprun_noinit.o)
 
 .PHONY: clean
 
