Rework HTIF handling

--- a/platform/hw/arch/riscv/Makefile.inc
+++ b/platform/hw/arch/riscv/Makefile.inc
@@ -1,5 +1,5 @@
 OBJS_BMK+=	arch/riscv/boot.o arch/riscv/clock.o arch/riscv/cpu.o
-OBJS_BMK+=	arch/riscv/machdep.o arch/riscv/htifcons.o arch/riscv/locore.o
+OBJS_BMK+=	arch/riscv/machdep.o arch/riscv/htif.o arch/riscv/locore.o
 LDSCRIPT=	arch/riscv/kern.ldscript
 
 arch/riscv/locore.o: arch/riscv/locore.S
